# services/data-validation-service/specs/apiSpecs.yaml
@@ -32,12 +32,12 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponseIBAN'
+                $ref: '#/components/schemas/GenericResponse'
               example:
                 responseCode: "200"
                 responseMessage: "OK"
                 response:
-                  bankData:
+                  bank_data:
                     countryISO3: ARE
                     bic: ADCBAEAAXXX
                     branch: null
@@ -55,7 +55,6 @@ paths:
                     account: "0012552369920001"
                     bank_code: "003"
                     branch_code: ""
-
                   validations:
                     chars:
                       code: "006"
@@ -104,7 +103,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponsePhone'
+                $ref: '#/components/schemas/GenericResponse'
               example:
                 responseCode: "200"
                 responseMessage: "OK"
@@ -141,9 +140,10 @@ components:
           type: string
           description: International Bank Account Number
           minLength: 1
+          maxLength: 30
           example: AE460260001015862843301
 
-    ApiResponseIBAN:
+    GenericResponse:
       type: object
       required:
         - responseCode
@@ -159,7 +159,7 @@ components:
           example: OK
 
         response:
-          $ref: '#/components/schemas/IBANValidationResponse'
+          type: object
 
     IBANValidationResponse:
       type: object
@@ -367,23 +367,7 @@ components:
           type: string
           example: du
 
-    ApiResponsePhone:
-      type: object
-      required:
-        - responseCode
-        - responseMessage
-        - response
-      properties:
-        responseCode:
-          type: string
-          example: "200"
 
-        responseMessage:
-          type: string
-          example: OK
-
-        response:
-          $ref: '#/components/schemas/PhoneValidationResponse'
 
 
   
