# services/data-validation-service/src/main/java/com/alramz/service/IBANValidationService.java
@@ -1,8 +1,8 @@
 package com.alramz.service;
 
+import com.alramz.model.GenericResponse;
 import com.alramz.model.IBANRequest;
-import com.alramz.model.IBANValidationResponse;
 
 public interface IBANValidationService {
-    IBANValidationResponse validate(IBANRequest request);
+    GenericResponse validate(IBANRequest request);
 }
